Add stylesheet to html file and add beginning css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>SVG Animation</title>
 </head>
 <body>
+    <div class="stars">
     <svg width="823" height="596" viewBox="0 0 823 596" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g id="undraw_counting_stars_re_smvv 1" clip-path="url(#clip0_4_104)">
         <g id="counting stars">
@@ -80,5 +82,6 @@
     </clipPath>
     </defs>
     </svg>
+    </div>
 </body>
 </html>
